push unsaved updates to 2 and 3

--- a/2_nlp/preprocessing.ipynb
+++ b/2_nlp/preprocessing.ipynb
@@ -625,18 +625,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim import corpora, models\n",
+    "import gensim\n",
+    "\n",
+    "# Prepare a dictionary and corpus for topic modeling\n",
+    "dictionary = corpora.Dictionary(df['processed_tweets'])\n",
+    "corpus = [dictionary.doc2bow(text) for text in df['processed_tweets']]\n",
+    "\n",
+    "# Apply LDA model\n",
+    "ldamodel = gensim.models.ldamodel.LdaModel(corpus, num_topics=5, id2word=dictionary, passes=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tweet: \"Historic visit by French Minister for Home Affairs &amp; Overseas Territories, @GDarmanin, to Australia, marking a new chapter in #France-#Australia cooperation. Engaging discussions on climate resilience in Pacific, cybercrime, civil protection, and police collaboration. 🇫🇷🇦🇺 https://t.co/vU1qCHouDl, Topics: (0, '0.044*\"cop\" + 0.008*\"like\" + 0.006*\"would\" + 0.004*\"law\"')\n",
+      "------------------------------------\n",
+      "Tweet: \"Historic visit by French Minister for Home Affairs &amp; Overseas Territories, @GDarmanin, to Australia, marking a new chapter in #France-#Australia cooperation. Engaging discussions on climate resilience in Pacific, cybercrime, civil protection, and police collaboration. 🇫🇷🇦🇺 https://t.co/vU1qCHouDl\n",
+      "Topic: (0, '0.010*\"cop\" + 0.006*\"cooperation\" + 0.004*\"de\" + 0.003*\"site\"')\n",
+      "Author: {'type': 'user', 'userName': 'FmGuerralves', 'url': 'https://x.com/FmGuerralves', 'twitterUrl': 'https://twitter.com/FmGuerralves', 'id': '940012138738827264', 'name': 'Fernando Guerra Alves', 'isVerified': False, 'profilePicture': 'https://pbs.twimg.com/profile_images/1401085475763351553/18wsXFtB_normal.jpg', 'description': 'Govt Relations & Policy Strategist | Specializing in Industry and Tech | ASEAN OCEANIA Market Expert | Multicultural Leadership Advocate', 'location': 'Sydney, New South Wales', 'followers': 51, 'following': 174, 'status': '', 'canDm': False, 'canMediaTag': True, 'createdAt': 'Mon Dec 11 00:15:33 +0000 2017', 'entities': {'description': {'urls': []}, 'url': {'urls': [{'display_url': 'businessfrance.fr/australie', 'expanded_url': 'http://businessfrance.fr/australie', 'indices': [0, 23], 'url': 'https://t.co/EyeqX5q7kG'}]}}, 'fastFollowersCount': 0, 'favouritesCount': 210, 'hasCustomTimelines': False, 'isTranslator': False, 'mediaCount': 42, 'statusesCount': 55, 'withheldInCountries': [], 'affiliatesHighlightedLabel': {}}\n",
+      "------------------------------------\n",
       "Tweet: 😐😙😆🧏‍♀️😩👨‍🦱\n",
-      " wear interview sometimes fast cooperation used, Topics: (1, '0.043*\"cop\" + 0.010*\"cooperation\" + 0.010*\"people\" + 0.007*\"would\"')\n",
-      "Tweet: The Directorate of Technical Cooperation in Africa be abolished and its functions, along with those of the Technical Aids Corps, transferred to an appropriate Department in the Ministry of Foreign Affairs., Topics: (2, '0.025*\"cooperation\" + 0.008*\"cop\" + 0.005*\"time\" + 0.003*\"year\"')\n",
-      "Tweet: It almost seems that a foreign policy based on harassment, violence and war instead of friendship and cooperation is bad in the long run, Topics: (3, '0.043*\"cooperation\" + 0.007*\"russia\" + 0.006*\"ukraine\" + 0.005*\"security\"')\n",
+      " wear interview sometimes fast cooperation used\n",
+      "Topic: (1, '0.023*\"cooperation\" + 0.017*\"cop\" + 0.005*\"russia\" + 0.005*\"nato\"')\n",
+      "Author: {'type': 'user', 'userName': 'CynthiaGur93764', 'url': 'https://x.com/CynthiaGur93764', 'twitterUrl': 'https://twitter.com/CynthiaGur93764', 'id': '1734899089622355969', 'name': 'Cynthia Gurule', 'isVerified': False, 'profilePicture': 'https://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png', 'description': '', 'location': '', 'followers': 0, 'following': 2, 'status': '', 'canDm': False, 'canMediaTag': True, 'createdAt': 'Wed Dec 13 11:32:40 +0000 2023', 'entities': {'description': {'urls': []}}, 'fastFollowersCount': 0, 'favouritesCount': 0, 'hasCustomTimelines': False, 'isTranslator': False, 'mediaCount': 7, 'statusesCount': 16, 'withheldInCountries': [], 'affiliatesHighlightedLabel': {}}\n",
+      "------------------------------------\n",
+      "Tweet: The Directorate of Technical Cooperation in Africa be abolished and its functions, along with those of the Technical Aids Corps, transferred to an appropriate Department in the Ministry of Foreign Affairs.\n",
+      "Topic: (2, '0.062*\"cop\" + 0.011*\"like\" + 0.010*\"people\" + 0.008*\"get\"')\n",
+      "Author: {'type': 'user', 'userName': 'nelsonakange', 'url': 'https://x.com/nelsonakange', 'twitterUrl': 'https://twitter.com/nelsonakange', 'id': '1039698149449842688', 'name': 'Nelson Akange', 'isVerified': False, 'profilePicture': 'https://pbs.twimg.com/profile_images/1753483652799905792/pJUIKTBq_normal.jpg', 'coverPicture': 'https://pbs.twimg.com/profile_banners/1039698149449842688/1708544837', 'description': \"I'm a Food Scientist | No.1 Blogger | Web Developer | Digital Market Expert | Gym bodybuilder/Fitness Enthusiast & Owner of @circlesonfoods\", 'location': 'Benue, Nigeria', 'followers': 3070, 'following': 28, 'status': '', 'canDm': True, 'canMediaTag': True, 'createdAt': 'Wed Sep 12 02:12:10 +0000 2018', 'entities': {'description': {'urls': []}, 'url': {'urls': [{'display_url': 'instagram.com/nelsonakange/', 'expanded_url': 'https://instagram.com/nelsonakange/', 'indices': [0, 23], 'url': 'https://t.co/e0HZnBV466'}]}}, 'fastFollowersCount': 0, 'favouritesCount': 4, 'hasCustomTimelines': False, 'isTranslator': False, 'mediaCount': 2127, 'statusesCount': 3747, 'withheldInCountries': [], 'affiliatesHighlightedLabel': {}}\n",
+      "------------------------------------\n",
+      "Tweet: It almost seems that a foreign policy based on harassment, violence and war instead of friendship and cooperation is bad in the long run\n",
+      "Topic: (3, '0.038*\"cooperation\" + 0.006*\"u\" + 0.006*\"thank\" + 0.005*\"one\"')\n",
+      "Author: {'type': 'user', 'userName': 'NikolajMeedom', 'url': 'https://x.com/NikolajMeedom', 'twitterUrl': 'https://twitter.com/NikolajMeedom', 'id': '413977771', 'name': 'Blues Bonkers 🇩🇰 🇺🇦🌻🚜🐫🦈', 'isVerified': False, 'profilePicture': 'https://pbs.twimg.com/profile_images/1658144417130192898/BjFMy8-B_normal.jpg', 'coverPicture': 'https://pbs.twimg.com/profile_banners/413977771/1708004311', 'description': 'Visual Artist • Procrastination enthusiast\\n\\n#Fella on a mission • #StandWithUkraine • #NAFO', 'location': 'Hovedstaden, Danmark', 'followers': 2302, 'following': 3913, 'status': '', 'canDm': False, 'canMediaTag': True, 'createdAt': 'Wed Nov 16 13:41:07 +0000 2011', 'entities': {'description': {'urls': []}, 'url': {'urls': [{'display_url': 'nikolajmeedom.dk', 'expanded_url': 'http://nikolajmeedom.dk', 'indices': [0, 23], 'url': 'https://t.co/MQA4Xxc4lA'}]}}, 'fastFollowersCount': 0, 'favouritesCount': 94686, 'hasCustomTimelines': True, 'isTranslator': False, 'mediaCount': 1118, 'statusesCount': 5295, 'withheldInCountries': [], 'affiliatesHighlightedLabel': {}}\n",
+      "------------------------------------\n",
       "Tweet: Subject: Reason for optimism is that it is now.\n",
       "Date: February 17, 2024 at 7:22:29 PM PST\n",
       "Attention: Geoffrey Rothwell Phd - geoffreyrothwell@yahoo.com- former principal economist for the Nuclear Energy Agency [NEA]-Organization for Economic Cooperation & Development [OECD], formerly 27 year senior lecturer of economics at Stanford University.\n",
@@ -683,37 +713,21 @@
       "\n",
       "GG\n",
       "\n",
-      "[Word count 742], Topics: (4, '0.044*\"cooperation\" + 0.008*\"minister\" + 0.006*\"international\" + 0.005*\"development\"')\n"
+      "[Word count 742]\n",
+      "Topic: (4, '0.048*\"cooperation\" + 0.007*\"minister\" + 0.007*\"security\" + 0.006*\"international\"')\n",
+      "Author: {'type': 'user', 'userName': 'GaryGevisser', 'url': 'https://x.com/GaryGevisser', 'twitterUrl': 'https://twitter.com/GaryGevisser', 'id': '336664901', 'name': 'Gary Gevisser', 'isVerified': False, 'profilePicture': 'https://pbs.twimg.com/profile_images/1199372944843182081/hdj6Ce51_normal.jpg', 'description': 'https://t.co/Zkpp7KgiV1', 'location': '', 'followers': 31, 'following': 2, 'status': '', 'canDm': True, 'canMediaTag': True, 'createdAt': 'Sat Jul 16 17:53:33 +0000 2011', 'entities': {'description': {'urls': [{'display_url': '2facetruth.com/gary-s-gevisse…', 'expanded_url': 'http://www.2facetruth.com/gary-s-gevisser/', 'indices': [0, 23], 'url': 'https://t.co/Zkpp7KgiV1'}]}, 'url': {'urls': [{'display_url': '2facetruth.com', 'expanded_url': 'http://2facetruth.com', 'indices': [0, 23], 'url': 'https://t.co/a5y66dKBrO'}]}}, 'fastFollowersCount': 0, 'favouritesCount': 185, 'hasCustomTimelines': True, 'isTranslator': False, 'mediaCount': 474, 'statusesCount': 3145, 'withheldInCountries': [], 'affiliatesHighlightedLabel': {}}\n"
      ]
     }
    ],
    "source": [
-    "from gensim import corpora, models\n",
-    "import gensim\n",
-    "\n",
-    "# Prepare a dictionary and corpus for topic modeling\n",
-    "dictionary = corpora.Dictionary(df['processed_tweets'])\n",
-    "corpus = [dictionary.doc2bow(text) for text in df['processed_tweets']]\n",
-    "\n",
-    "# Apply LDA model\n",
-    "ldamodel = gensim.models.ldamodel.LdaModel(corpus, num_topics=5, id2word=dictionary, passes=15)\n",
-    "\n",
     "# Print topics\n",
     "topics = ldamodel.print_topics(num_words=4)\n",
     "for i, topic in enumerate(topics):\n",
     "    print(\"------------------------------------\")\n",
     "    print(f\"Tweet: {df['text'].iloc[i]}\")\n",
     "    print(f\"Topic: {topic}\")\n",
-    "    \n",
-    "\n"
+    "    print(f\"Author: {(df['author'].iloc[i])}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
